# research-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  report_formatter.py  search_cache.py  web_search.py
.github/workflows/: docker-publish.yml
cli/: main.py
src/cli/: main.py
src/mcp_server/: __init__.py  server.py
src/research_orchestrator/: __init__.py  agents.py  config.py  logger.py  models.py  orchestrator.py  settings.py  tools.py  types.py  utils.py
src/research_orchestrator/agents/: __init__.py  agent_manager.py  base_agent.py  lead_researcher.py  research_agent.py  reviewer_agent.py  synthesis_agent.py
src/research_orchestrator/processing/: __init__.py  citation_processor.py  result_formatter.py  source_tracker.py
src/research_orchestrator/reports/: __init__.py  formatter.py  synthesis.py
src/research_orchestrator/search/: __init__.py  cache.py  web_search.py
src/research_orchestrator/web/: __init__.py  content_fetcher.py
src/research_orchestrator/web/search/: __init__.py  cache.py  web_search.py
tests/: __init__.py  test_citation_processor.py  test_orchestrator.py  test_result_formatter.py  test_search_cache.py  test_source_tracker.py  test_url_normalization.py
