[project]
name = "research-mcp"
version = "0.1.0"
description = "Deep research MCP server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.0",
    "python-dotenv>=1.1.1",
    "strands-agents-tools>=0.2.3",
    "strands-agents[ollama]>=1.5.0",
]

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.9"]

[tool.ruff]
# Formatting and linting configuration
line-length = 88
indent-width = 4

# Assume Python 3.12+.
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# Also enable import sorting (`I`), unused imports (`F401`), and more!
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501", # line too long, handled by ruff formatter
    "W191", # indentation contains tabs
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings
line-ending = "auto"
